[package]
name = "spotify-rs"
version = "0.3.1"
categories = [""]
description = "A Rust wrapper for the Spotify API."
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Bogpan/spotify-rs"
documentation = "https://docs.rs/spotify-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4.4"
thiserror = "1.0"
