[package]
name = "spotify-rs"
version = "0.4.1"
edition = "2024"
description = "A Rust wrapper for the Spotify API."
readme = "README.md"
repository = "https://github.com/Bogpan/spotify-rs"
license = "MIT OR Apache-2.0"
keywords = ["spotify", "spotify-api", "api"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4.4"
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"
spotify-rs-macros = { path = "../spotify-rs-macros", version = "0.1.0" }
snafu = "0.8.5"
tokio = { version = "1.32", features = ["time"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.32", features = ["full"] }
rouille = "3.6.2"
